--- a/spectrum/spectrum/Resources/index.html
+++ b/spectrum/spectrum/Resources/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Metabolite Chart</title>
+    <title>Metabolite MSMS Chart</title>
 
     <!-- 1. Add these JavaScript inclusions in the head of your page -->
     <script type="text/javascript" src="lib/jquery-1.6.1.min.js"></script>
@@ -13,6 +13,7 @@
         <script src="https://code.highcharts.com/modules/exporting.js"></script>
     -->
     <!-- 2. Add the JavaScript to initialize the chart on document ready -->
+	<script type="text/javascript" src="./data.js"></script>
     <script type="text/javascript" src="./App.js"></script>
     <style type="text/css">
         body {
